force-app/main/default/objects/Event_Speaker__c/fields/Add_Error__c.field-meta.xml
<CustomField>
    <fullName>Add_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the duplicate record exist of the same speaker then add error by validation rule</description>
    <label>Add Error</label>
    <type>Checkbox</type>
</CustomField>