force-app/main/default/objects/Event_Speaker__c/validationRules/Add_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Error</fullName>
    <active>true</active>
    <description>If add error checkbox is checked that means there is record duplicacy. Then give error on speaker field.</description>
    <errorConditionFormula>Add_Error__c = true</errorConditionFormula>
    <errorDisplayField>Speaker__c</errorDisplayField>
    <errorMessage>Duplicate speaker  found</errorMessage>
</ValidationRule>