force-app/main/default/objects/Event_Speaker__c/validationRules/Speaker_Associated_With_Event.validationRule-meta.xml
<ValidationRule>
    <fullName>Speaker_Associated_With_Event</fullName>
    <active>true</active>
    <description>Speaker can only be associated with the Event whose End Date is in future &amp; Event Live Checkbox is checked</description>
    <errorConditionFormula>DATETIMEVALUE( Event__r.End__c ) &lt;=DATETIMEVALUE( TODAY()) ||  Event__r.Live__c =False</errorConditionFormula>
    <errorDisplayField>Event__c</errorDisplayField>
    <errorMessage>Speaker can only be associated with the Event whose End Date is in future &amp; Event Live Checkbox is checked</errorMessage>
</ValidationRule>